Tue Feb 10 10:34:02 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: remove small TODO

Mon Feb  9 17:52:13 EST 2004	JK Lowden <jklowden@schemamania.org>
	* include/sybdb.h
	* src/dblib/bcp.c src/dblib/dblib.c
	* src/tds/convert.c
	- support bcp in of uniqueidentifier datatype
	* src/ctlib/Makefile.am src/dblib/Makefile.am
	- revert to exporting symbols pending NetBSD linkability

Mon Feb 09 17:02:34 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* TODO: add a TODO for a test
	* src/odbc/odbc.c:
	- support SQL_C_DEFAULT for SQLFetch
	- start supporting reading format after SQLPrepare (now only
	  enabled with --enable-developing option)

Mon Feb 09 16:32:54 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/numeric.c:
	- fix a Bus Error on some architecture (like SPARC)

Mon Feb 09 15:28:07 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h: small type change

Mon Feb 09 14:05:33 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/Makefile.am src/odbc/unittests/.cvsignore:
	* src/odbc/unittests/prepare_results.c:
	- new test for SQLPrepare (not working), needed feature for Oracle

Thu Feb 05 14:19:23 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* doc/Makefile.am doc/tds_layer.txt(removed):
	- removed tds_layer.txt

Wed Feb 04 19:21:44 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/config.c:
	- rename constant
	* src/dblib/dblib.c:
	- rewrote dbstring_free

Tue Feb  3 14:06:57 EST 2004	JK Lowden <jklowden@schemamania.org>
	* include/cspublic.h include/ctlib.h include/dblib.h
	* include/sybdb.h include/tds.h include/tds_sysdep_private.h
	* include/tdsiconv.h include/tdsodbc.h include/tdsstring.h
	* src/apps/freebcp.c src/apps/tsql.c
	* src/ctlib/cs.c src/ctlib/ct.c src/ctlib/ctutil.c
	* src/ctlib/unittests/array_bind.c src/ctlib/unittests/cancel.c
	* src/ctlib/unittests/common.c src/ctlib/unittests/cs_config.c